--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script type="text/javascript" src="js/backbone-min.js"></script>
     <!-- Parse.js -->
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.3.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
